--- a/playbooks/vars/Windows.yml
+++ b/playbooks/vars/Windows.yml
@@ -193,6 +193,7 @@ set_hibernate:
   win_hibernate:
     - size: 100
 start_menu_customization:
+  install: yes
   download_file:
     - url: https://raw.githubusercontent.com/YoraiLevi/ansible_playbooks/master/playbooks/files/start.bin
       dest: '%LocalAppData%/Packages/Microsoft.Windows.StartMenuExperienceHost_cw5n1h2txyewy/LocalState/start.bin'
