--- a/playbooks/vars/Windows.yml
+++ b/playbooks/vars/Windows.yml
@@ -199,6 +199,8 @@ start_menu_customization:
   download_file:
     - url: https://raw.githubusercontent.com/YoraiLevi/ansible_playbooks/master/playbooks/files/start.bin
       dest: '%LocalAppData%/Packages/Microsoft.Windows.StartMenuExperienceHost_cw5n1h2txyewy/LocalState/start.bin'
+  include_task:
+    - file: restart_explorer.yml
 ahk_tts:
   install: yes
   reg_edits:
@@ -252,6 +254,7 @@ ahk_remapper:
 # https://www.joseespitia.com/2017/09/15/set-wallpaper-powershell-function/
 # https://www.osource.se/index.php/custom-lockscreen-image-in-windows-10-with-powershell/
 #https://www.powershellgallery.com/packages/Set-LockScreen/1.0/Content/Set-LockScreen.ps1
+# https://github.com/juangranados/powershell-scripts/blob/main/Change%20Lock%20Screen%20and%20Desktop%20Background%20in%20Windows%2010%20Pro/Set-LockScreen.ps1
 #     #Unnecessary Windows 10 AppX Apps
 
 #     #Sponsored Windows 10 AppX Apps
